  required changing the .pyc magic number.  This means that .pyc files
  generated before 2.5c2 will be regenerated.

- with and as are now keywords.

- Bug #1664966: Fix crash in exec if Unicode filename can't be decoded.

- Issue #1537: Changed GeneratorExit's base class from Exception to
  BaseException.

Library
-------

- Issue #1786: pdb should use its own stdin/stdout around an exec call
  and when creating a recursive instance.

- Issue #1698398 Zipfile.printdir() crashed because the format string
  expected a tuple type of length six instead of time.struct_time object.

- Issue #1780: The Decimal constructor now accepts arbitrary leading
  and trailing whitespace when constructing from a string.
  Context.create_decimal no longer accepts trailing newlines.

- Decimal.as_tuple(), difflib.find_longest_match() and inspect functions
  that returned a tuple now return a named tuple.

- Doctest now returns results as a named tuple for readability:  
      (0, 7) --> TestResults(failed=0, attempted=7)

- Issue #846388. re.match is interruptible now, which is particularly
  good for long regular expression matches.

- pyexpat, patch #1137: allow setting buffer_size attribute 
  on Parser objects to set the character data buffer size.

- Issue #1757: The hash of a Decimal instance is no longer affected by
  the current context.

- Patch #467924: add ZipFile.extract() and ZipFile.extractall() in the
  zipfile module.

- Issue #1646: Make socket support the TIPC protocol.

- Bug #1742: return os.curdir from os.path.relpath() if both arguments are
  equal instead of raising an exception.

- Patch #1637: fix urlparse for URLs like 'http://x.com?arg=/foo'.

- Patch #1698: allow '@' in username parsed by urlparse.py.

- Issue #1735: TarFile.extractall() now correctly sets directory permissions
  and times.

- Bug #1713: posixpath.ismount() claims symlink to a mountpoint is a mountpoint.

- Bug #1687: Fxed plistlib.py restricts <integer> to Python int when writing
